# TOPP

./: .gitignore  CMakeLists.txt  Doxyfile  FrictionLimits.cpp  FrictionLimits.h  KinematicLimits.cpp  KinematicLimits.h  LICENSE  Makefile  Makefile.in  MotionPlanning.py  PiecewisePolynomialTrajectory.cpp  PiecewisePolynomialTrajectory.h  README.md  Readme  TOPP  TOPP.cpp  TOPP.h  TOPP_bindings.cpp  TOPPbindings.cpp  TOPPopenravepy.py  TOPPpy.py  TorqueLimits.cpp  TorqueLimits.h  TorqueLimits.py  TorqueLimitsRave.cpp  TorqueLimitsRave.h  Trajectory.cpp  Trajectory.h  Trajectory.py  ZMPTorqueLimits.cpp  ZMPTorqueLimits.h  ZMPTorqueLimits.py  __init__.py  config.h.in  configure  configure.in  dotemacs  python_bindings.cpp  test.cpp  (+12 more)
robots/: ArmCut.xml  ArmFull.xml  twodof.robot.xml
src/: CMakeLists.txt  ComputePolygon.cpp  ComputePolygon.h  Errors.h  FrictionLimits.cpp  FrictionLimits.h  KinematicLimits.cpp  KinematicLimits.h  PolygonConstraints.cpp  PolygonConstraints.h  SO3Constraints.cpp  SO3Constraints.h  TOPP.cpp  TOPP.h  TOPPbindings.cpp  TOPPopenravepy.py  TOPPpy.py  TorqueLimits.cpp  TorqueLimits.h  TorqueLimitsRave.cpp  TorqueLimitsRave.h  TorqueLimitsRave3.cpp  TorqueLimitsRave3.h  Trajectory.cpp  Trajectory.h  ZMPTorqueLimits.cpp  ZMPTorqueLimits.h  openravepy.h
src/python/: Bimanual.py  ClosedChain.py  Errors.py  PhaseRRT.py  QuadraticConstraints.py  TOPPopenravepy.py  TOPPpy.py  TorqueLimits.py  Trajectory.py  Utilities.py  ZMPTorqueLimits.py  __init__.py
tests/: SO3.py  bimanual.py  comp_mintos.py  comp_mintos_gridres.py  example.py  interfacing_openrave.py  kinematic_2dof.py  kinematic_2dof_legacy.py  kinematic_2dof_quadcons.py  kinematic_bezier_legacy.py  kinematic_limits.py  kinematic_limits_avp.py  kinematic_limits_viapoints.py  pendulum.py  quadratic_constraints.py  quadratic_from_file.py  robust_kinematic.py  robust_torque.py  testSO3functionCPP.py  testrosen.py  torque_limits.py  torques_limits.py  torques_pendulum.py  torques_pendulum_legacy.py  torques_pendulum_quadcons.py  torques_pendulum_rave.py  torques_wam.py  torques_wam_quadcons.py  torques_wam_rave.py  unittests.py  vip_pendulum.py  zmp.py  zmp_hrp4.py  zmp_hrp4.sav.py  zmp_wam.py  zmp_wam_3dof.py
tests/data/: lie.constraints  lie.traj  mujin1.topp.traj
tests/jerk/: Integration.py  playground.py  test_integration.py
tests/probleminstance/: constraints1  constraints2  constraints3  constraints5  constraints6  constraints7  test1.py  tomas-develop_hrp2_14.env.xml  trajectory1  trajectory2  trajectory4  trajectory5  trajectory6
tests/zmp_hrp4/: run.py  test1.py
